--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Sarala:wght@400;700&display=swap');
 
-/* Set custom variables here */
+:root {
+  --bs-primary:#2e483a;
+}
 
-
-
-
+.navbar {
+background-color: var(--bs-primary);
+}
 
 .navbar-brand {
   color: #F6F3ED;
@@ -12,6 +14,7 @@
 
 body {
   font-family: "Sarala", sans-serif;
+  background-color: #F6F3ED;
 }
 
 h1, h2, h3 {
