--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 :root {
   --bs-primary:#2e483a;
+  --bs-light: #f6f3ed;
 }
 
 .navbar {
@@ -19,6 +20,16 @@ body {
 
 h1, h2, h3 {
   font-family: "Merriweather", serif;
+}
+
+.btn {
+  background-color: var(--bs-primary);
+  color: var(--bs-light);
+}
+
+.btn:hover {
+  background-color: var(--bs-light);
+  color: var(--bs-primary);
 }
 
 #hero {
